# RoboPilot

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  roadmap.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: publish.yml  quality.yml  test-publish.yml  tests.yml  vscode-extension.yml  vscode-publish.yml
docs/: api.md  architecture.md  command_reference.md  compatibility.md  demo_script.md  demo_walkthrough.md  developer_setup.md  integration_notes.md  json_contracts.md  known_limitations.md  pypi_publish.md  release_process.md  stability_policy.md  testing.md  troubleshooting.md  tutorial_ros1_to_ros2_migration.md  tutorial_vscode_migration_workflow.md  v1_scope.md  vscode_extension.md  vscode_marketplace.md  vscode_packaging.md  workflows.md
docs/research/: README.md  codex_implementation_prompt_template.md  decision_log.md  feature_backlog_2x.md  llm_research_prompt_template.md  research_brief_template.md
docs/zh-CN/: README.md  demo_walkthrough.md  known_limitations.md  troubleshooting.md  tutorial_ros1_to_ros2_migration.md  tutorial_vscode_migration_workflow.md  vscode_extension.md  vscode_marketplace.md  vscode_packaging.md  workflows.md
examples/: README.md
examples/error_logs/: action_server_unavailable.txt  cuda_out_of_memory.txt  cv_bridge_missing.txt  opencv_camera_timeout.txt  qos_mismatch.txt  tf_lookup_timeout.txt
examples/generated_projects/demo_detector/: README.md  package.xml  robopilot.yaml  setup.cfg  setup.py
examples/generated_projects/demo_detector/config/: params.yaml
examples/generated_projects/demo_detector/demo_detector/: detector_node.py
examples/generated_projects/demo_detector/launch/: demo_detector.launch.py
examples/graphs/: demo_pipeline.mmd
examples/migration_outputs/: README.md  migration_plan.json  migration_plan.yaml  scaffold_report.md
examples/pipelines/: demo_pipeline.txt
examples/prompts/: demo_detector.txt
examples/ros1_migration_demo/: CMakeLists.txt  README.md  package.xml
examples/ros1_migration_demo/launch/: demo.launch
examples/ros1_migration_demo/scripts/: talker.py
examples/ros1_migration_demo/src/: listener.cpp
examples/ros1_migration_demo/srv/: Demo.srv
examples/ros2_scaffold_demo/: CMakeLists.txt  MIGRATION_NOTES.md  README.md  package.xml
examples/ros2_scaffold_demo/action/: Demo.action
examples/ros2_scaffold_demo/config/: params.yaml
examples/ros2_scaffold_demo/launch/: demo.launch.py
examples/ros2_scaffold_demo/msg/: Demo.msg
examples/ros2_scaffold_demo/scripts/: talker.py
examples/ros2_scaffold_demo/src/: listener.cpp
src/robopilot/: __init__.py  main.py
src/robopilot/api/: __init__.py  apply.py  migration.py  models.py  project.py  static_analysis.py
src/robopilot/apply/: __init__.py  apply_plan.py
src/robopilot/apply_plan/: __init__.py  plan.py
src/robopilot/apply_preview/: __init__.py  preview.py
src/robopilot/ci_check/: __init__.py
src/robopilot/debugger/: __init__.py  log_analyzer.py
src/robopilot/detector/: __init__.py  project_detector.py
src/robopilot/diff/: __init__.py  spec_diff.py
src/robopilot/doctor/: __init__.py
src/robopilot/generator/: __init__.py  project_generator.py  project_spec.py  task_classifier.py  template_registry.py  templates.py
src/robopilot/graph/: __init__.py  mermaid_generator.py
src/robopilot/history/: __init__.py  journal.py
src/robopilot/inspector/: __init__.py  project_inspector.py
src/robopilot/launch_lint/: __init__.py
src/robopilot/lint/: __init__.py
src/robopilot/migrate_score/: __init__.py
src/robopilot/migration/: __init__.py  plan_diff.py  plan_validator.py  preview.py  ros1_to_ros2.py  scaffold_generator.py  scaffold_preview.py  scaffold_report.py  scaffold_validator.py
src/robopilot/planner/: __init__.py  base.py  llm_planner.py  openai_client.py  prompts.py  provider_config.py  rule_based_planner.py
src/robopilot/refiner/: __init__.py  llm_refiner.py  spec_refiner.py
src/robopilot/repair/: __init__.py  repair_suggester.py
src/robopilot/report/: __init__.py  project_report.py
src/robopilot/rollback/: __init__.py  rollback.py
src/robopilot/ros1/: __init__.py  inspector.py
src/robopilot/ros2/: __init__.py  inspector.py
src/robopilot/spec/: __init__.py  io.py  validator.py
src/robopilot/tutorial/: __init__.py
src/robopilot/user_templates/: __init__.py
src/robopilot/utils/: __init__.py  file_ops.py
src/robopilot/workspace/: __init__.py
tests/: test_api_layer.py  test_apply_plan.py  test_apply_plan_execution.py  test_apply_preview.py  test_ci_check.py  test_dependency_analyzer.py  test_docs_encoding.py  test_doctor.py  test_history.py  test_json_contracts.py  test_launch_lint.py  test_lint.py  test_llm_refiner.py  test_log_analyzer.py  test_mermaid_generator.py  test_migrate_score.py  test_migration_plan_diff.py  test_migration_plan_validate.py  test_migration_preview.py  test_migration_scaffold_generator.py  test_migration_scaffold_preview.py  test_migration_scaffold_report.py  test_migration_scaffold_validator.py  test_planner.py  test_project_detector.py  test_project_generator.py  test_project_inspector.py  test_project_report.py  test_repair_suggester.py  test_rollback.py  test_ros1_inspector.py  test_ros1_to_ros2_migration_plan.py  test_ros2_inspector.py  test_spec_diff.py  test_spec_refiner.py  test_spec_workflow.py  test_task_classifier.py  test_tutorial.py  test_user_templates.py  test_workspace.py
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts  output.ts  projectTree.ts  robopilotCli.ts  types.ts
vscode-extension/test/: robopilotCli.test.ts
