[project]
name = "robopilot"
version = "1.0.0"
description = "No-ROS-required static engineering toolchain for ROS-style projects."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "J1angJJ" }
]
keywords = [
    "robotics",
    "ros",
    "ros2",
    "ai-agent",
    "developer-tools",
    "code-generation"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering"
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]
llm = [
    "openai>=1.0.0"
]

[project.scripts]
robopilot = "robopilot.main:app"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
