<?xml version="1.0"?>
<package format="3">
  <name>ros1_migration_demo</name>
  <version>0.1.0</version>
  <description>RoboPilot example ROS2 migration scaffold for manual review.</description>
  <maintainer email="demo@example.com">RoboPilot Demo Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
