<?xml version="1.0"?>
<package format="3">
  <name>demo_detector</name>
  <version>0.18.0</version>
  <description>ROS-style object detection node skeleton.</description>
  <maintainer email="developer@example.com">RoboPilot User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
